# invokerl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  publish.yml
.hivemind/context/: atlas-checkpoint.md  cipher-checkpoint.md  onyx-checkpoint.md
.hivemind/memory/: architecture.md  conventions.md  decisions.md  known-issues.md
docs/: disaggregation-math.md
examples/: profile_step.py  sweep_grpo_lr.py  train_disagg.py  train_fsdp.py  train_grpo_gsm8k.py
invokerl/: __init__.py  __main__.py  _logging.py  distributed.py  generator.py  pipeline.py  plot_sweeps.py  policy.py  profiling.py  sweep.py  train.py  trainer.py
invokerl/algorithms/: __init__.py  base.py  dapo.py  dpo.py  grpo.py  ppo.py  simpo.py
invokerl/configs/: grpo_gsm8k.yaml  grpo_gsm8k_disagg.yaml  grpo_gsm8k_disagg_bg56.yaml  grpo_gsm8k_fsdp.yaml  grpo_gsm8k_long.yaml  grpo_gsm8k_long_cosine.yaml  grpo_gsm8k_profile.yaml  screen_beta002.yaml  screen_beta008.yaml  screen_group8.yaml  screen_lr1e5.yaml  screen_lr2e5.yaml  screen_temp07.yaml  sweep_batch_scaling.yaml  sweep_beta002.yaml  sweep_beta008.yaml  sweep_combo_aggressive.yaml  sweep_fp32_lr1e6.yaml  sweep_fp32_lr5e6.yaml  sweep_group8.yaml  sweep_lr1e5.yaml  sweep_lr2e6.yaml  sweep_lr5e6.yaml
invokerl/data/: base.py  gsm8k.py
invokerl/datasets/: __init__.py  base.py  gsm8k.py
invokerl/engine/: distributed.py  generator.py  pipeline.py  policy.py  trainer.py
invokerl/profiling/: __init__.py  __main__.py  _nvtx.py  cli.py  constants.py  flops.py  nsys.py  roofline.py  step.py  timing.py  trace.py
invokerl/rewards/: __init__.py  base.py  rule.py
results/: gsm8k_0.6b_50.jsonl  training_history.json
results/profile/: profile_summary.json
results/v1/: gsm8k_0.6b_50_summary.json
results/v1/profile/: profile_summary.json
scripts/: analyze_sweep.py  plot.py  plot_accuracy_comparison.py  plot_all_configs_512tok.py  plot_bandwidth_tensorcore.py  plot_gpu_utilization.py  plot_memory_profile.py  plot_pipeline_comparison.py  plot_wallclock_comparison.py  profile.py  sweep.py
tilerl/: dapo.py  debug_compare.py  debug_cupy_only.py  debug_nan.py  dpo.py  eval_gsm8k.py  grpo.py  inference.py  optim.py  ppo.py  profile_grpo.py  qwen3.py  sft.py  simpo.py  train_grpo_gsm8k.py
