[project]
name = "invokerl"
version = "0.1.0"
description = "Hackable RL post-training for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "datasets>=2.14",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "torch>=2.6",
    "transformers>=4.45",
    "vllm>=0.18,<0.19",
]

[project.scripts]
invokerl = "invokerl.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["invokerl"]
