[project]
name = "invokerl"
version = "0.1.0"
description = "Hackable RL post-training for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "accelerate>=0.26",
    "datasets>=2.14",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "safetensors>=0.4",
    "torch>=2.6",
    "transformers>=4.45",
    "vllm>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["invokerl"]

[tool.uv]
# Use CUDA 13.0 wheels for Blackwell (sm_120) GPU support.
torch-backend = "cu130"
