[project]
name = "invokerl"
version = "0.1.0"
description = "Hackable RL post-training for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dheemanth Manur" },
]
keywords = ["rl", "llm", "post-training", "grpo", "vllm", "fsdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=0.26",
    "datasets>=2.14",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "rich>=13",
    "safetensors>=0.4",
    "torch>=2.6",
    "transformers>=4.45",
    "vllm>=0.18",
]

[project.urls]
Homepage = "https://github.com/dhmnr/invokerl"
Repository = "https://github.com/dhmnr/invokerl"
Issues = "https://github.com/dhmnr/invokerl/issues"

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["invokerl"]

[tool.hatch.build.targets.sdist]
include = [
    "invokerl/",
    "examples/",
    "README.md",
    "LICENSE",
]

[tool.uv]
# Use CUDA 13.0 wheels for Blackwell (sm_120) GPU support.
torch-backend = "cu130"

# -- Ruff ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (soft limit; we aim for 100 but allow overflow)
    "E741",  # ambiguous variable name
    "B008",  # function call in default argument
    "B905",  # zip without strict= (Python 3.10 doesn't support strict=)
    "B904",  # raise from (noisy)
    "B027",  # empty methods in ABC (we use them as optional override hooks)
]

[tool.ruff.lint.per-file-ignores]
"invokerl/__init__.py" = ["F401", "I001"]  # re-exports; keep logical grouping
"*/__init__.py" = ["F401"]                 # re-exports look like unused imports
"examples/*.py" = ["E402"]                 # imports after torch env-var tweaks
